Fix category labels on iOS mobile

--- a/index.css
+++ b/index.css
@@ -45,7 +45,7 @@
     justify-content: left;
     height: 245px;
     margin-bottom: 10px;
-    padding-left: 110px;
+    padding-left: 95px;
 }
 
 .key {
@@ -53,17 +53,15 @@
     z-index: 5;
     top: -10px;
     left: 0px;
-    width: 50px;
+    width: 90px;
     height: 245px;
     margin-left: 0px;
-    padding-left: 60px;
-    padding-right: 40px;
 
-    text-align: center;
-    justify-content: center;
     writing-mode: vertical-rl;
     transform: rotate(180deg);
     text-transform: uppercase;
+    text-align: center;
+    line-height: 80px;
     font-size: 20px;
     letter-spacing: 3px;
     color: white;
